--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\13\\tomcat80.properties
 j2ee.server.home=C:/Program Files/Java/apache-tomcat-8.5.34
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Java\\apache-tomcat-8.5.34
+selected.browser=default
 user.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\13\\build.properties
